# StandardEmpty

./: .gitignore  CMakeLists.txt  README.md
Example/: CMakeLists.txt  Example_Empty.cpp
